<resources>
    <!-- DashBoardStrings -->
    <string name="name"></string>
    <string name="app_name">LabOfThings</string>
    <string name="test">test</string>
    <string name="login_text">Please enter your username and password</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="loginButton_text">login</string>
    <string name="monitorThName">Name</string>
    <string name="monitorThDamageState">state of Damage</string>
    <string name="monitorThDescription">Description</string>
    <string name="monitorThOnoffState">On/Off</string>
    <string name="monitorCategory">Category</string>

    <string name="select_mode">Choose a mode</string>
    <string-array name="login_modes">
        <item>User</item>
        <item>Admin</item>
        <item>Controller</item>

    </string-array>

    <!-- MainUserStrings -->
    <string name="cat1">Display</string>
    <string name="cat2">Light</string>
    <string name="cat3">Triggered</string>
    <string name="cat4"> Mechanic</string>
    <string name="userMainCat">Sensors by Categories</string>
    <string name="userMainFrequentlyUsed">Frequently used</string>
    <string name="frequency1">first</string>
    <string name="frequency2">second</string>
    <string name="frequency3">third</string>
    <string name="searchButton">Search</string>
    <string name="showAll">showAll</string>


    <string name="btn_preset_admin_choice">Choose Presetmanagement</string>
    <string name="btn_user_admin_choice">Choose Usermanagement</string>
    <string name="title_activity_tt">tt</string>
    <string name="nameOfPreset">Name of preset: </string>
    <string name="totalPresetListText">Total preset list:</string>
    <string name="credits">Credits</string>
    <string name="iconTitle">Freepik</string>
    <string name="iconSource">http://www.flaticon.com</string>
    <string name="iconLicense">Icons Licence: http://creativecommons.org/licenses/by/3.0/</string>
    <string name="alertHeadline">failed Sensors:</string>
</resources>
