<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.monitor.MonitorMainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="@string/alertHeadline"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:textAlignment="center" />

    <TableLayout

        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/monitorbgalert"
        >
        <ScrollView

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"

            >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:stretchColumns="0,1,2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:isScrollContainer="false"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/frameAlert"
        android:textAlignment="center"

        >



    </TableLayout>

        </ScrollView>
    </TableLayout>


    <TextView
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userMainCat"
        android:id="@+id/catText"
        android:layout_marginTop="50dp"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/cat2"
                android:id="@+id/cat1Button"
                android:layout_gravity="end" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/cat3"
                android:id="@+id/cat2Button"

                android:layout_gravity="center_horizontal" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/cat1"
                android:id="@+id/cat3Button"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/cat4"
                android:id="@+id/cat4Button"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
